centos7 build notes
openssl


    sudo yum install libtool perl-core zlib-devel -y
    curl -O -L https://github.com/openssl/openssl/archive/OpenSSL_1_1_0g.tar.gz
    tar -zxvf OpenSSL_1_1_0g.tar.gz
    cd openssl-OpenSSL_1_1_0g
    ./config --prefix=/usr/local/openssl --openssldir=/usr/local/openssl shared zlib
    make
    make install

-----------------------

cmake 3


    wget http://www.cmake.org/files/v3.0/cmake-3.0.0.tar.gz
    tar -zxvf cmake-3.0.0.tar.gz
    cd cmake-3.0.0
    ./bootstrap 
    gmake 
    gmake install
    mv cmake-3.0.0 /usr/local/
    nano ~/.bashrc

    
at the end paste

    PATH=/usr/local/cmake-3.0.0/bin:$PATH
    export PATH

...save

    cd /usr/local/cmake-3.0.0
    mkdir share
    cp -R /usr/local/share/cmake-3.0/ share/


    reboot
    

cmake -v //should show 3

-----------------------

zeromq


    sudo yum install -y epel-release
    sudo yum install -y zeromq-devel



-----------------------

Get newer version boost than yum version of boost


    

    wget https://www.boost.org/users/history/version_1_58_0.html
    tar -xzf boost_1_58_0.tar.bz2
    cd boost_1_58_0
    ./bootstrap.sh --prefix=/opt/boost
    ./b2 install --prefix=/opt/boost --with=all

------------------------skip this part (maybe!!!)

get boost libraries that match boost version

    wget https://rpmfind.net/linux/fedora/linux/development/rawhide/Everything/x86_64/os/Packages/b/boost-devel-1.66.0-14.fc29.x86_64.rpm

    rpm -i ^^^ the file ^^^
    
    
    ln -s /usr/local/include/boost /usr/include/boost

    cmake .. -DBOOST_ROOT="/usr/include/boost"
    
    
------------------------

copy
https://github.com/zeromq/cppzmq/blob/master/zmq.hpp

nano /usr/local/include/zmq.hpp
paste and save

------------------------


    yum install libsodium-devel

    yum install graphviz

    yum install readline-devel

    wget http://rpmfind.net/linux/centos/7.5.1804/os/x86_64/Packages/pcsc-lite-devel-1.8.8-7.el7.i686.rpm
    
    yum install ^^^ the file ^^^
    
    yum install miniupnpc-devel
    
    yum install pcsc-lite-devel



------------------------

install seollar

    git clone --recursive https://github.com/Methodiseme/seollar.git
    cd seollar/
    mkdir dist
    cd dist
    cmake ../
    make
    
    
!!!!!!!!!!!!!!!!!!!!!!!!
error at 65%

[ 65%] Building CXX object src/common/CMakeFiles/obj_common.dir/download.cpp.o
In file included from /root/seollar/contrib/epee/include/net/http_client.h:41:0,
                 from /root/seollar/src/common/download.cpp:37:
/root/seollar/contrib/epee/include/net/net_helper.h: In member function ‘void epee::net_utils::blocked_mode_client::shutdown_ssl()’:
/root/seollar/contrib/epee/include/net/net_helper.h:576:26: error: ‘boost::asio::ssl::error’ has not been declared
        boost::asio::ssl::error::stream_truncated
                          ^
make[2]: *** [src/common/CMakeFiles/obj_common.dir/download.cpp.o] Error 1
make[1]: *** [src/common/CMakeFiles/obj_common.dir/all] Error 2
make: *** [all] Error 2



!!!!!!!!!!!!!!!!!!!!!!!!
    
    
    
------------------------

To start seollar:

    cd src
    ./seollar

Syncing will take some time. Once done syncing you can setup your first wallet. To start simplewallet:

    ./simplewallet

Then follow the instructions on setting up your first wallet ...
